# logos-delivery-module

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  delivery_module_plugin.cpp  delivery_module_plugin.h  docker-compose.yml  flake.nix  metadata.json
.github/workflows/: ci.yml  doctests.yml  release.yml
conf/: logos-test.json
docs/: Dockerfile  docker-compose.yml  infra-dashboard.md  query-node.md  run-locally.md  run-node.md  versioning.md
docs/conf/: logos-dev.json
doctests/: delivery-module-runtime.test.yaml  run.sh
doctests/outputs/: delivery-module-runtime.md
examples/: simple.cpp
main/: index.html
main/macos-latest/: index.html
main/ubuntu-latest/: index.html
pr-47/: index.html
pr-47/macos-latest/: index.html
pr-47/ubuntu-latest/: index.html
pr-51/: index.html
pr-51/macos-latest/: index.html
pr-51/ubuntu-latest/: index.html
pr-53/: index.html
pr-53/macos-latest/: index.html
pr-53/ubuntu-latest/: index.html
pr-54/: index.html
pr-54/macos-latest/: index.html
pr-54/ubuntu-latest/: index.html
pr-55/: index.html
pr-55/macos-latest/: index.html
pr-55/ubuntu-latest/: index.html
pr-56/: index.html
pr-56/macos-latest/: index.html
pr-56/ubuntu-latest/: index.html
pr-57/: index.html
pr-57/macos-latest/: index.html
pr-57/ubuntu-latest/: index.html
pr-60/: index.html
pr-60/macos-latest/: index.html
pr-60/ubuntu-latest/: index.html
pr-61/: index.html
pr-61/macos-latest/: index.html
pr-61/ubuntu-latest/: index.html
pr-62/: index.html
pr-62/macos-latest/: index.html
pr-62/ubuntu-latest/: index.html
pr-63/: index.html
pr-63/macos-latest/: index.html
pr-63/ubuntu-latest/: index.html
pr-65/: index.html
scripts/: install-node-tools.sh  test-release-contract.sh
src/: api_call_handler.h  delivery_module_interface.h  delivery_module_plugin.cpp  delivery_module_plugin.h
tests/: CMakeLists.txt  test_delivery_integration.cpp  test_delivery_module.cpp
tests/e2e/: README.md  conftest.py  pytest.ini  requirements.txt  test_message_delivery.py  test_node_lifecycle.py
tests/e2e/diagnostics/: wedge_gdb.py
tests/e2e/libs/: constants.py  helpers.py
tests/e2e/probes/: README.md  conftest.py  test_probes.py
tests/mocks/: delivery_module_events_stub.cpp  delivery_module_events_stub.h  mock_liblogosdelivery.cpp
tests/stubs/lib/: liblogosdelivery.h  liblogosdelivery_kernel.h
